fix: add gap to not-only

--- a/style.css
+++ b/style.css
@@ -184,7 +184,7 @@ h5 {
   flex-direction: column;
   align-items: start;
   /* justify-content: center; */
-  padding-top: 6rem;
+  padding-top: 16rem;
   gap: 2rem;
 }
 
